@@ -28,7 +28,6 @@ import android.view.ViewGroup;
 import android.view.animation.Animation;
 import androidx.annotation.NonNull;
 import androidx.annotation.Nullable;
-import androidx.lifecycle.MutableLiveData;
 import androidx.lifecycle.ViewModelProvider;
 import androidx.preference.PreferenceManager;
 import java.util.List;
@@ -48,7 +47,7 @@ public class SettingsCatBehaviorFragment extends BaseFragment {
 
   private FragmentSettingsCatBehaviorBinding binding;
   private MainActivity activity;
-  private MutableLiveData<String> messageDurationLive;
+  private SettingsViewModel viewModel;
 
   @Override
   public View onCreateView(
@@ -69,7 +68,7 @@ public class SettingsCatBehaviorFragment extends BaseFragment {
   @Override
   public void onViewCreated(@NonNull View view, @Nullable Bundle savedInstanceState) {
     activity = (MainActivity) requireActivity();
-    SettingsViewModel viewModel = new ViewModelProvider(this).get(SettingsViewModel.class);
+    viewModel = new ViewModelProvider(this).get(SettingsViewModel.class);
     binding.setActivity(activity);
     binding.setFragment(this);
     binding.setViewModel(viewModel);
@@ -107,8 +106,12 @@ public class SettingsCatBehaviorFragment extends BaseFragment {
     setForPreviousDestination(Constants.ARGUMENT.ANIMATED, false);
   }
 
-  public MutableLiveData<String> getmessageDuration() {
-    return messageDurationLive;
+  public String getMessageDuration() {
+    return getResources().getQuantityString(
+        R.plurals.property_seconds_num,
+        viewModel.getMessageDuration(),
+        viewModel.getMessageDuration()
+    );
   }
 
   @Override
