@@ -270,6 +270,10 @@
             android:onClick="@{() -> viewModel.showMessageDurationBottomSheet()}"
             clickUtil="@{clickUtil}">
 
+          <ImageView
+            style="@style/Widget.Grocy.ImageView.ListItem.Icon"
+            tools:ignore="ContentDescription" />
+
           <LinearLayout style="@style/Widget.Grocy.LinearLayout.ListItem.TextBox">
 
             <TextView
@@ -278,7 +282,11 @@
 
             <TextView
                 style="@style/Widget.Grocy.TextView.ListItem.Title"
-                android:text="@{viewModel.messageDuration}"/>
+                android:text="@{fragment.messageDuration}"/>
+
+            <TextView
+              style="@style/Widget.Grocy.TextView.ListItem.Description"
+              android:text="@string/setting_message_duration_description" />
 
           </LinearLayout>
 
