@@ -5,6 +5,7 @@
 - Improved: Inventory page now has stock info like on consume page
 - Improved: Hide Open Food Facts option for now, because not implemented yet
 - Improved: Lists now have fade-in animations
+- Improved: Transaction message duration is now adjustable (thanks @firesoft-de)
 - Fixed: Some bottom sheet headers had wrong padding
 
 2.0.0-beta03
